test/fail/ForCountStmt-action.app
//Expression should be of type

application test

  function root(){
    for(i:Int from 0 to "7"){
    }
  }
